# upwd-gtk

./: Cargo.toml  main.ui
src/: config.rs  main.rs
