[package]
name = "upwd-gtk"
version = "0.1.0"
authors = ["Andrey Vikulov <avikuloff@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.9"
gio = "0.9"
gdk = "0.13"
confy = "0.4"
serde = { version = "1.0", features = ["derive"] }
upwd-lib = { path = "../upwd-lib/", version = "0.1" }
